@@ -25,6 +25,9 @@ Version 2.0.xxxx (xxxx 2015)
 - Implemented: MySensors, Saving/Loading VAR values
 - Implemented: Mertik (Thermostat 3) added Second Up/Second Down option in the popup
 - Implemented: MySensors Voltage/UV/Lock value
+- Implemented: RFXCom, support for Blinds T9/T10
+- Changed: P1 Electra/Gas meters now have an ID, update all your domoticz instances !
+- Changed: S0 Meter, actual usage calculation
 
 Version 2.0.2284 (February 22th 2015)
 - Fixed: Firefox, RGBW/Setpoint popup
